@@ -1,7 +1,7 @@
 Package: basefun
 Title: Infrastructure for Computing with Basis Functions
-Version: 1.1-2
-Date: 2022-01-14
+Version: 1.1-3
+Date: 2022-05-25
 Authors@R: person("Torsten", "Hothorn", role = c("aut", "cre"),
                   email = "Torsten.Hothorn@R-project.org", comment = c(ORCID = "0000-0001-8301-0471"))  
 Description: Some very simple infrastructure for basis functions.
@@ -11,8 +11,8 @@ Suggests: coneproj
 URL: http://ctm.R-forge.R-project.org
 License: GPL-2
 NeedsCompilation: yes
-Packaged: 2022-01-14 12:07:29 UTC; hothorn
+Packaged: 2022-05-25 07:00:17 UTC; hothorn
 Author: Torsten Hothorn [aut, cre] (<https://orcid.org/0000-0001-8301-0471>)
 Maintainer: Torsten Hothorn <Torsten.Hothorn@R-project.org>
 Repository: CRAN
-Date/Publication: 2022-01-14 12:42:42 UTC
+Date/Publication: 2022-05-25 08:20:02 UTC
