@@ -2,11 +2,18 @@
 \name{NEWS}
 \title{NEWS file for the basefun package}
 
+\section{Changes in Version 1.1-3 (2022-05-25)}{
+  \itemize{
+    \item{\code{Bernstein_basis(..., ui = "zerointegral")} came with incorrect constraint matrix.}
+  }
+}
+
 \section{Changes in Version 1.1-2 (2022-01-14)}{
   \itemize{
     \item{Allow coefficients in matrix form.}
   }
 }
+
 
 \section{Changes in Version 1.1-1 (2021-11-12)}{
   \itemize{
